--- a/frontend/.env
+++ b/frontend/.env
@@ -3,4 +3,4 @@ VITE_RAZORPAY_KEY_ID='rzp_test_Hgkhf9taFURafq'
 VITE_SERVICE_ID=service_17sspfg
 VITE_TEMPLATE_ID=template_nhnbx8s
 VITE_PUBLIC_KEY=ZJFICWXdNaPHUKPID
-REACT_APP_API_URL=https://medisync-diseasepredictor.onrender.com
+VITE_API_URL=https://medisync-diseasepredictor.onrender.com
